--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,16 +37,16 @@ $(function() {
   </script>
 </head>
 <body>
+<%= render 'layouts/header' %>
 <% if logged_in?  %>
 <div id="menu">
   <%= render_navigation(:expand_all => true) %>
-
-
     <div id="user_info_menu">
         <%= t "global.welcome_back" %>&nbsp;<a href="<%= my_account_path(:id=> current_user)%>"><%= current_user.name %></a>
     </div>
-  </div>
-  <% end %>
+</div>
+<% end %>
+
 <div style="clear:both;float:none;"></div>
 <div id="container">
   <div id="yield">
