--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div id="ddtabs1" class="basictab">
   <ul>
-    <li><a href="#<%= t "users.tab.user_type" %>" rel="tab1"><%= t "users.tab.user_type" %></a></li>
+    <li><a href="#<%= t "users.tab.details" %>" rel="tab1"><%= t "users.tab.details" %></a></li>
     <li><a href="#<%= t "users.tab.contact_info" %>" rel="tab2"><%= t "users.tab.contact_info" %></a></li>
     <li><a href="#<%= t "global.tab.notes" %>" rel="tab3"><%= t "global.tab.notes" %></a></li>
     <li><a href="#<%= t "users.tab.permissions" %>" rel="tab4"><%= t "users.tab.permissions" %></a></li>
