--- a/app/views/users/edit_profile.html.erb
+++ b/app/views/users/edit_profile.html.erb
@@ -2,7 +2,9 @@
   <%= module_header %>
   <div class="module">
     <ul>
+      <% if current_user.client == true %>
       <li class="delete"><%= link_to (t "user.cancel_account_button"),@user, :confirm => [t 'user.msg.cancel_account'], :href => '#' %></li>
+     <% end %>
       <li class="exit"><%= link_to (t "global.exit"), :back %></li>
       <% if can? :manage, @users %>
         <li class="delete"><%= link_to (t "global.delete"), @user, :confirm => 'Are you sure?', :method => :delete %></li>
