--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -5,7 +5,7 @@
     <% if current_user.client == true %>
         <li class="create"><%= link_to [t "workorder.t_add_new"], "work_orders/new?client_id=#{current_user.id}"%></li>
      <% else %>
-        <li class="create"><%= link_to [t "workorder.t_add_new"], users_path %></li>
+        <li class="create"><%= link_to [t "workorder.t_add_new"], clients_path %></li>
     <% end %>
     <li class="back"><%= link_to (t "global.back"), :back %></li>
   </ul>
@@ -20,7 +20,8 @@
       <li><a href="#assigned" rel="tab2"><%= t "workorder.tab_menu_assigned" %>&nbsp;(<% if @assigned_work_orders.count > 0 %><span style="color:red;"><%= @assigned_work_orders.count %></span><% else %><%= @assigned_work_orders.count %><% end %>)</a></li>
       <li><a href="#on_hold" rel="tab3"><%= t "workorder.tab_menu_on_hold" %>&nbsp;(<% if @on_hold_work_orders.count > 0 %><span style="color:red;"><%= @on_hold_work_orders.count %></span><% else %><%= @on_hold_work_orders.count %><% end %>)</a></li>
       <li><a href="#pending" rel="tab4"><%= t "workorder.tab_menu_pending" %>&nbsp;(<% if @pending_work_orders.count > 0 %><span style="color:red;"><%= @pending_work_orders.count %></span><% else %><%= @pending_work_orders.count %><% end %>)</a></li>
-      <li><a href="#closed" rel="tab5"><%= t "workorder.tab_menu_closed" %>&nbsp;(<% if @closed_work_orders.count > 0 %><span style="color:lime;"><%= @closed_work_orders.count %></span><% else %><%= @closed_work_orders.count %><% end %>)</a></li>
+      <li><a href="#re_opened" rel="tab5"><%= t "workorder.tab_menu_re_opened" %>&nbsp;(<% if @re_opened_work_orders.count > 0 %><span style="color:red;"><%= @re_opened_work_orders.count %></span><% else %><%= @re_opened_work_orders.count %><% end %>)</a></li>
+      <li><a href="#closed" rel="tab6"><%= t "workorder.tab_menu_closed" %>&nbsp;(<% if @closed_work_orders.count > 0 %><span style="color:lime;"><%= @closed_work_orders.count %></span><% else %><%= @closed_work_orders.count %><% end %>)</a></li>
     </ul>
   </div>
   <div id="index_table">
@@ -30,7 +31,8 @@
       <div id="tab2" class="tabcontent" ><%= render(:partial => 'work_orders/assigned_wo_tab') %></div>
       <div id="tab3" class="tabcontent"><%= render(:partial => 'work_orders/on_hold_wo_tab') %></div>
       <div id="tab4" class="tabcontent"><%= render(:partial => 'work_orders/pending_wo_tab') %></div>
-      <div id="tab5" class="tabcontent"><%= render(:partial => 'work_orders/closed_wo_tab') %></div>
+      <div id="tab5" class="tabcontent"><%= render(:partial => 'work_orders/re_opened_wo_tab') %></div>
+      <div id="tab6" class="tabcontent"><%= render(:partial => 'work_orders/closed_wo_tab') %></div>
     </div>
   </div>
   <div class="clear"></div>
