--- a/app/views/users/clients.html.erb
+++ b/app/views/users/clients.html.erb
@@ -1,56 +1,72 @@
-<% if can? :manage, @users %>
-<div id="top_float_left">
-  <%= link_to(image_tag('add.png',:title => [t "user.add_new_user"], :align => "bottom", :hspace => "2"), new_user_path) %><%= link_to([t "global.new"], new_user_path) %>
-</div>
-<% end %>
-<br/>
-<%= form_tag users_path, :method => 'get' do %>
-   <p><%= t "user.search"  %>
-     <%= text_field_tag :search, params[:search] %>
-     <%= submit_tag (t "global.submit"), :name => nil %>
-    </p>
-    <% end %>
-
-<%= paginate @users  %>
-
-<table id="index_table" >
-  <tr>
-    <th ><%= t "user.number" %></th>
-    <th ><%= t "user.name" %></th>
-    <th ><%= t "user.username" %></th>
-    <th ><%= t "global.email" %></th>
-    <th ><%= t "global.role" %></th>
-    <th ><%= t "global.phone" %></th>
-    <th ><%= t "global.mobile" %></th>
-    <th ><%= t "global.active" %></th>
-    <th align="center" ><%= t "supplier.actions" %></th>
-  </tr>
-
-<% for user in @users do  %>
-  <tr class="<%= cycle :odd, :even %>">
-    <td><%= user.id %></td>
-    <td><%= user.name %></td>
-    <td><%= user.username %></td>
-    <td><%= auto_link_email_addresses( user.email ).html_safe %></td>
-    <td style="text-transform:capitalize;"><%= user.role %></td>
-    <td><%= user.phone %></td>
-    <td><%= user.mobile %></td>
-    <td><%= user.active %></td>
-    <td>
-      <%= link_to(image_tag('view.png', :title => [t "global.view"]), user )%>
-      <% if can? :update, @user %>
-        &nbsp;<%= link_to(image_tag('edit.png', :title => [t "global.edit"]), :controller => "users", :action => "edit", :id => user.id  ) %>
+<% if logged_in? %>
+    <div id="sidebar_left">
+      <% if can? :manage, @users %>
+          <%= module_header %>
+          <div class="module">
+            <ul>
+              <li class="create"><%= link_to([t "global.new"], new_user_path) %></li>
+              <li class="back"><%= link_to([t "global.back"], :back) %></li>
+            </ul>
+          </div>
       <% end %>
-      <% if user.client == true then %>
-        <% if can? :create, WorkOrder %>
-            &nbsp;<%= link_to(image_tag('wrench.png', :title => [t "global.workorder"]), :controller => "work_orders", :action => "new", :client_id => user.id )%>
+      <%= render 'layouts/left_sidebar_modules' %>
+    </div>
+    <div id="center_col" class="no_right_sidebar content">
+      <% if current_user.employee? && current_user.employee = true %>
+          <br/>
+          <%= form_tag clients_path, :method => 'get' do %>
+              <p><%= t "user.search" %>
+                <%= text_field_tag :search_users, params[:search_users] %>
+                <%= submit_tag (t "global.submit"), :name => nil %>
+              </p>
+          <% end %>
+      <% end %>
+      <% if can? :manage, @users %>
+          <%= will_paginate @users %>
+      <% end %>
+      <table id="index_table">
+        <tr>
+          <th><%= t "user.number" %></th>
+          <th><%= sortable "name", [t "user.name"] %></th>
+          <th><%= [t "user.active_wo"] %></th>
+          <th><%= t "user.username" %></th>
+          <th><%= t "global.email" %></th>
+          <th><%= t "global.role" %></th>
+          <th><%= t "global.phone" %></th>
+          <th><%= t "global.mobile" %></th>
+          <th><%= t "global.active" %></th>
+          <th align="center"><%= t "supplier.actions" %></th>
+        </tr>
+        <% for user in @users do %>
+            <tr class="<%= cycle :odd, :even %>">
+              <td><%= user.id %></td>
+              <td><%= user.name %></td>
+              <td align="center"><%= active_work_order_count(user.id).count %></td>
+              <td><%= user.username %></td>
+              <td><%= auto_link_email_addresses(user.email).html_safe %></td>
+              <td style="text-transform:capitalize;"><%= user.role %></td>
+              <td><%= user.phone %></td>
+              <td><%= user.mobile %></td>
+              <td><%= user.active %></td>
+              <td>
+                <%= link_to(image_tag('view.png', :title => [t "global.view"]), user) %>
+                <% if can? :update, @user %>
+                    &nbsp;<%= link_to(image_tag('edit.png', :title => [t "global.edit"]), :controller => "users", :action => "edit", :id => user.id) %>
+                <% end %>
+                <% if user.client? then %>
+                    <% if can? :create, WorkOrder %>
+                        &nbsp;<%= link_to(image_tag('wrench.png', :title => [t "global.workorder"]), :controller => "work_orders", :action => "new", :client_id => user.id) %>
+                    <% end %>
+                <% end %>
+                <% if can? :destroy, @user %>
+                    &nbsp;<%= link_to(image_tag('delete.png', :title => [t "global.delete"]), user, :confirm => 'Are you sure?', :method => :delete) %>
+                <% end %>
+              </td>
+            </tr>
         <% end %>
+      </table>
+      <% if can? :manage, @users %>
+          <%= will_paginate @users %>
       <% end %>
-      <% if can? :destroy, @user %>
-        &nbsp;<%= link_to(image_tag('delete.png', :title => [t "global.delete"]), user, :confirm => 'Are you sure?', :method => :delete ) %>
-      <% end %>
-    </td>
-  </tr>
 <% end %>
-</table>
-
+</div>
