--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,6 @@
   <%= module_header %>
   <div class="module">
     <ul>
-      <% if current_user.client = true %>
-        <li class="delete">placeholder</li>
-      <% end %>
       <% if can? :manage, :all %>
         <li class="delete"><%= link_to (t "global.delete"), @user, :confirm => 'Are you sure?', :method => :delete %></li>
       <% end %>
@@ -14,180 +11,172 @@
   </div>
   <%= render 'layouts/left_sidebar_modules' %>
 </div>
-<div id="center_col">
-  <div class="content">
-    <table>
-      <tr>
-        <td colspan="2" align="right">
-          <strong><%= t "user.name" %>:</strong>
-        </td>
-        <td align="left">
-         <%= @user.name %>
-        </td>
-    </tr>
-    <tr>
-        <td colspan="2" align="right">
-          <strong><%= t "user.username" %>:</strong>
-        </td>
-        <td align="left">
-         <%= @user.username %>
-        </td>
-    </tr>
-    <tr>
-        <td colspan="2" align="right">
-          <strong><%= t "global.email" %>:</strong>
-        </td>
-        <td align="left">
-         <%= auto_link_email_addresses( @user.email ).html_safe %>
-        </td>
-      </tr>
-    <tr>
-        <td colspan="2" align="right">
-          <strong><%= t "global.role" %>:</strong>
-        </td>
-        <td align="left" style="text-transform:capitalize;">
-         <%= @user.role %>
-        </td>
-    </tr>
-    <tr>
-        <td colspan="2" align="right">
-          <strong><%= t "global.active" %>:</strong>
-        </td>
-        <td align="left">
-         <% if @user.active == true  %>
-          <%= image_tag("tick.png", :title => (t "global.active")) %>
-         <% else %>
-          <%= image_tag("delete.png", :title => (t "global.disabled")) %>
-         <% end %>
-        </td>
-    </tr>
-    <tr>
-        <td colspan="2" align="right">
-          <strong><%= t "global.address" %>:</strong>
-        </td>
-        <td align="left">
-          <textarea rows="6" cols="50" name="address" readonly="readonly" ><%=h @user.address  %></textarea>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2" align="right">
-          <strong><%= t "global.city" %>:</strong>
-        </td>
-        <td align="left">
-         <%=h @user.city %>
-        </td>
-      </tr>
-     <tr>
-        <td colspan="2" align="right">
-          <strong><%= t "global.state" %>:</strong>
-        </td>
-        <td align="left">
-         <%=h @user.state %>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2" align="right">
-          <strong><%= t "global.zip" %>:</strong>
-        </td>
-        <td align="left">
-         <%=h @user.zip %>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2" align="right">
-          <strong><%= t "global.phone" %>:</strong>
-        </td>
-        <td align="left">
-         <%=h @user.phone %>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2" align="right">
-          <strong><%= t"global.mobile" %>:</strong>
-        </td>
-        <td align="left">
-         <%=h @user.mobile %>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2" align="right">
-          <strong><%= t"global.fax" %>:</strong>
-        </td>
-        <td align="left">
-         <%=h @user.fax %>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2" align="right">
-          <strong><%= t "global.notes" %>:</strong>
-        </td>
-        <td align="left" >
-         <textarea rows="6" cols="50" name="contact" readonly="readonly" ><%=h @user.notes  %></textarea>
-        </td>
-      </tr>
 
-      </table>
-    <fieldset id="collapsable">
-      <h1 align="center"><%= t "user.t_log" %></h1>
-    <table >
-      <tr>
-        <td align="right" >
-          <strong><%= t "global.created_at" %>:</strong>
-        </td>
-        <td >
-          <%= time_ago_in_words(@user.created_at) %> <%= t "global.ago" %> (<%= localize @user.created_at, :format => :short  %>) <%= t "global.by" %> <%= @user.created_by %>.
-        </td>
-      </tr>
-      <% if @user.edited_at == nil %>
-          <% else %>
-      <tr>
-        <td align="right">
-          <strong><%= t "global.updated_at" %>:</strong>
-        </td>
-        <td >
-          <%= time_ago_in_words(@user.edited_at) %> <%= t "global.ago" %> (<%= localize @user.edited_at, :format => :short  %>) <%= t "global.by" %> <%= @user.edited_by %>.
-        </td>
-      </tr>
-          <% end %>
-      <tr>
-        <td align="right">
-          <strong><%= t "user.account_accessed" %>:</strong>
-        </td>
-        <td >
-          <% if @user.login_count == 0 %>
-              <%= t "user.not_logged_in_yet" %>
-              <% else %>
-              <% if @user.login_count == 1 %>
-                  <%= time_ago_in_words(@user.last_request_at) %> <%= t "global.ago" %> (<%= localize @user.last_request_at, :format => :short  %>) <%= t "global.from" %> <%= @user.current_login_ip %>
-               <% else %>
-                  <% if @user.login_count > 1 %>
-          <%= time_ago_in_words(@user.last_request_at) %> <%= t "global.ago" %> (<%= localize @user.last_request_at, :format => :short  %>) <%= t "global.from" %> <%= @user.last_login_ip %>
-              <% end %>
-              <% end %>
-              <% end %>
-        </td>
-      </tr>
-      <tr>
-        <td align="right">
-          <strong><%= t "user.login_failures" %>:</strong>
-        </td>
-        <td >
-          <%= @user.failed_login_count %>
-        </td>
-      </tr>
-    <tr>
-        <td align="right">
-          <strong><%= t "user.login_count" %>:</strong>
-        </td>
-        <td >
-          <%= @user.login_count %>
-        </td>
-      </tr>
-
-    </table><br>
-    </fieldset>
-
-
+<div id="center_col" class="no_right_sidebar">
+  <div id="ddtabs1" class="basictab">
+    <ul>
+      <li><a href="#details" rel="contact_info"><%= t "users.tab.contact_info" %></a></li>
+      <li><a href="#address" rel="address_info"><%= t "users.tab.address_info" %></a></li>
+      <li><a href="#notes" rel="notes"><%= t "users.tab.notes" %></a></li>
+      <li><a href="#log" rel="log"><%= t "users.tab.log" %></a></li>
+      <li><a href="#new" rel="tab1"><%= t "workorder.tab_menu_new" %>&nbsp;(<% if clients_workorders(@user.id,1).count > 0 %><span style="color:red;"><%= @clients_workorders.count %></span><% else %><%= @clients_workorders.count%><% end %>)</a></li>
+    </ul>
   </div>
+    <div class="tabcontainer">
 
+      <div id="contact_info" class="tabcontent">
+        <table>
+              <tr>
+                <td colspan="2" align="right">
+                  <strong><%= t "user.name" %>:</strong>
+                </td>
+                <td align="left">
+                 <%= @user.name %>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" align="right">
+                  <strong><%= t "user.username" %>:</strong>
+                </td>
+                <td align="left">
+                 <%= @user.username %>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" align="right">
+                  <strong><%= t "global.email" %>:</strong>
+                </td>
+                <td align="left">
+                 <%= auto_link_email_addresses( @user.email ).html_safe %>
+                </td>
+              </tr>
+            <tr>
+                <td colspan="2" align="right">
+                  <strong><%= t "global.role" %>:</strong>
+                </td>
+                <td align="left" style="text-transform:capitalize;">
+                 <%= @user.role %>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" align="right">
+                  <strong><%= t "global.active" %>:</strong>
+                </td>
+                <td align="left">
+                 <% if @user.active == true  %>
+                  <%= image_tag("tick.png", :title => (t "global.active")) %>
+                 <% else %>
+                  <%= image_tag("delete.png", :title => (t "global.disabled")) %>
+                 <% end %>
+                </td>
+            </tr>
+             <tr>
+                <td colspan="2" align="right">
+                  <strong><%= t "global.phone" %>:</strong>
+                </td>
+                <td align="left">
+                 <%=h @user.phone %>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="2" align="right">
+                  <strong><%= t"global.mobile" %>:</strong>
+                </td>
+                <td align="left">
+                 <%=h @user.mobile %>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="2" align="right">
+                  <strong><%= t"global.fax" %>:</strong>
+                </td>
+                <td align="left">
+                 <%=h @user.fax %>
+                </td>
+              </tr>
+
+              </table>
+
+
+
+      </div>
+
+      <div id="address_info" class="tabcontent">
+         <div class="show_layout">
+           <label><%= t "global.address" %></label><div class="field"><textarea rows="6" cols="50" name="address" readonly="readonly" ><%=h @user.address  %></textarea></div>
+           <label><%= t "global.city" %></label><div class="field"><%=h @user.city %></div>
+           <label><%= t "global.state" %></label><div class="field"><%=h @user.state %></div>
+           <label><%= t "global.zip" %></label><div class="field"> <%=h @user.zip %></div>
+         </div>
+      </div>
+      <div id="notes" class="tabcontent">
+        <div class="show_layout">
+           <label><%= t "global.notes" %></label><div class="field"><textarea rows="6" cols="50" name="contact" readonly="readonly" ><%=h @user.notes  %></textarea></div>
+        </div>
+      </div>
+      <div id="log" class="tabcontent">
+         <fieldset id="collapsable">
+              <h1 align="center"><%= t "user.t_log" %></h1>
+            <table >
+              <tr>
+                <td align="right" >
+                  <strong><%= t "global.created_at" %>:</strong>
+                </td>
+                <td >
+                  <%= time_ago_in_words(@user.created_at) %> <%= t "global.ago" %> (<%= localize @user.created_at, :format => :short  %>) <%= t "global.by" %> <%= @user.created_by %>.
+                </td>
+              </tr>
+              <% if @user.edited_at == nil %>
+                  <% else %>
+              <tr>
+                <td align="right">
+                  <strong><%= t "global.updated_at" %>:</strong>
+                </td>
+                <td >
+                  <%= time_ago_in_words(@user.edited_at) %> <%= t "global.ago" %> (<%= localize @user.edited_at, :format => :short  %>) <%= t "global.by" %> <%= @user.edited_by %>.
+                </td>
+              </tr>
+                  <% end %>
+              <tr>
+                <td align="right">
+                  <strong><%= t "user.account_accessed" %>:</strong>
+                </td>
+                <td >
+                  <% if @user.login_count == 0 %>
+                      <%= t "user.not_logged_in_yet" %>
+                      <% else %>
+                      <% if @user.login_count == 1 %>
+                          <%= time_ago_in_words(@user.last_request_at) %> <%= t "global.ago" %> (<%= localize @user.last_request_at, :format => :short  %>) <%= t "global.from" %> <%= @user.current_login_ip %>
+                       <% else %>
+                          <% if @user.login_count > 1 %>
+                  <%= time_ago_in_words(@user.last_request_at) %> <%= t "global.ago" %> (<%= localize @user.last_request_at, :format => :short  %>) <%= t "global.from" %> <%= @user.last_login_ip %>
+                      <% end %>
+                      <% end %>
+                      <% end %>
+                </td>
+              </tr>
+              <tr>
+                <td align="right">
+                  <strong><%= t "user.login_failures" %>:</strong>
+                </td>
+                <td >
+                  <%= @user.failed_login_count %>
+                </td>
+              </tr>
+            <tr>
+                <td align="right">
+                  <strong><%= t "user.login_count" %>:</strong>
+                </td>
+                <td >
+                  <%= @user.login_count %>
+                </td>
+              </tr>
+
+            </table><br>
+            </fieldset>
+      </div>
+      <div id="tab1" class="tabcontent"></div>
+    </div>
   </div>
+  <div class="clear"></div>
+
