--- a/app/views/replies/_form.html.erb
+++ b/app/views/replies/_form.html.erb
@@ -1,18 +1,17 @@
-<%= simple_form_for(@reply) do |f| %>
-  <%= f.error_notification %>
+<%= form_for [@work_order,@reply] do |f| %>
+  <%= f.error_messages %>
+  <%= f.hidden_field :work_order_id %>
+  <%= f.hidden_field :user_id %>
+  <p>
+    <%= f.label :private %><br />
+    <%= f.boolean :private %>
+  </p>
+  <p>
+    <%= f.label :content, "Comment" %><br />
+    <%= f.text_area :content, :rows => '12', :cols => 35 %>
+  </p>
+    <div class="center">
+       <%= f.submit %>
+    </div>
 
-  <div class="inputs">
-
-    <%= f.input :user_id, :as => :hidden, :input_html => { :value => current_user.id } %>
-    <%= f.input :work_order_id, :as => :hidden, :input_html => { :value => params[:work_order_id]} %>
-
-    <%= f.input :content %>
-
-    <%= f.input :private %>
-
-  </div>
-
-  <div class="center">
-    <%= f.button :submit %>
-  </div>
 <% end %>
