More CSS stuff for replies section on work orders show page.

--- a/app/views/replies/edit.html.erb
+++ b/app/views/replies/edit.html.erb
@@ -1,6 +1,18 @@
+<div id="sidebar_left">
+  <%= module_header %>
+  <div class="module">
+
+</div>
+  </div>
+<div id="center_col" class="content no_right_sidebar">
+  <div id="show_layout">
+
 <h1>Editing reply</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @reply %> |
 <%= link_to 'Back', replies_path %>
+
+      </div>
+      </div>
