--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -68,7 +68,7 @@
   <div id="sc3" class="tabcontent">
   <%= simple_form_for @product do |f| %>
                   <%= f.input :taxable, :label =>(t "product.taxable") %>
-                  <%= f.input :tax_rate, :label =>(t "products.tax_rate"), :hint => (t "products.hint_tax_rate") %>
+                  <%= f.input :tax_rate, :label =>(t "products.tax_rate"), :hint => (t "products.hint_tax_rate"),  :input_html => {:value => Setting::tax_rate} %>
                   <%= f.input :discountable, :label =>(t "products.discountable") %>
                   <%= f.input :disc_amount, :label =>(t "products.disc_amount"), :input_html => {:size => 5} %>
                   <%= f.input :disc_percent,:label =>(t "products.disc_percent"), :input_html => {:size => 5} %>
